[package]
name = "parser"
version = "0.1.0"
authors = ["Levi Harrison <git@leviharrison.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

html5ever = "0.25.1"
markup5ever_arcdom = "0.1.1"
